<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_recipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            android:layout_marginTop="15dp"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/it_img_recipe"
                    android:layout_width="180dp"
                    android:layout_height="150dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:clipToOutline="true"
                    android:background="@drawable/image_view_bg"/>

                <TextView
                    android:id="@+id/it_label_recipe"
                    android:layout_toRightOf="@+id/it_img_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label"
                    android:layout_margin="10dp"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

<!--                <TextView-->
<!--                    android:id="@+id/it_id_recipe"-->
<!--                    android:layout_toRightOf="@+id/it_label_recipe"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_margin="10dp"-->
<!--                    android:textSize="20sp"-->
<!--                    android:textColor="@color/black"-->
<!--                    android:textStyle="bold" />-->

                <TextView
                    android:id="@+id/it_id_recipe"
                    android:layout_toRightOf="@+id/it_img_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/it_label_recipe"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tl_id"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/it_url_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/it_id_recipe"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/it_id_recipe"
                    android:text="@string/tl_url"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/it_calories_recipe_txt"
                    android:layout_toRightOf="@+id/it_img_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/it_url_recipe"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tl_calories"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/it_calories_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/it_url_recipe"
                    android:layout_marginStart="3dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/it_calories_recipe_txt"
                    android:text="@string/calories"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/it_time_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/it_calories_recipe"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/it_img_recipe"
                    android:text="@string/tl_time"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/it_time_recipe_txt"
                    android:layout_toRightOf="@+id/it_time_recipe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/it_calories_recipe"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:text="@string/tl_minutes"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/it_detail_recipe"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_toRightOf="@+id/it_img_recipe"
                    android:layout_below="@id/it_time_recipe"
                    android:background="@drawable/btn_background_cari"
                    android:text="@string/btn_detail_resep"
                    android:textSize="13sp"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

</LinearLayout>